为Node添加了Transformation可选属性。Sprite和Shape类因此重构。 添加了矩阵栈系统。 ASSERT宏更名为ONEU_ASSERT。

--- a/core/AtomDemo/AtomDemo.vcproj
+++ b/core/AtomDemo/AtomDemo.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)\$(ProjectName).at"
+				OutputFile="..\plugins\$(ProjectName).at"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)\$(ProjectName).at"
+				OutputFile="..\plugins\$(ProjectName).at"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
