--- a/trunk/core/OUE/OUE.vcproj
+++ b/trunk/core/OUE/OUE.vcproj
@@ -117,6 +117,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
+				AdditionalIncludeDirectories="../_lua;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;ONEU_EXPORTS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
@@ -412,15 +413,23 @@
 				>
 			</File>
 			<File
+				RelativePath=".\swig\Label.i"
+				>
+			</File>
+			<File
 				RelativePath=".\swig\OUE.i"
 				>
 			</File>
 			<File
-				RelativePath=".\swig\oue_wrap.cxx"
+				RelativePath=".\swig\oue_lua.cxx"
 				>
 			</File>
 			<File
 				RelativePath=".\swig\Scene.i"
+				>
+			</File>
+			<File
+				RelativePath=".\swig\Shape.i"
 				>
 			</File>
 			<File
@@ -433,6 +442,10 @@
 			</File>
 			<File
 				RelativePath=".\swig\types.i"
+				>
+			</File>
+			<File
+				RelativePath=".\swig\Vector.i"
 				>
 			</File>
 			<File
