--- a/trunk/core/Game/Game.vcproj
+++ b/trunk/core/Game/Game.vcproj
@@ -179,6 +179,10 @@
 				RelativePath=".\main.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\main.cppx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
