使用Ruby作为脚本语言。由于SWIG的Ruby支持Director，接口文件有所完善。 TODO 加入Ruby出错处理。（目前错误是直接崩溃）

--- a/core/Game/Game.vcproj
+++ b/core/Game/Game.vcproj
@@ -179,6 +179,10 @@
 				RelativePath=".\main.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\main.cppx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
