转移文件中……

--- a/core/OUE/OUE.vcproj
+++ b/core/OUE/OUE.vcproj
@@ -371,6 +371,98 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="DXLib"
+				>
+				<File
+					RelativePath=".\Impl\DXLib\D3DDefs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXDefs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXGE.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXGE.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXGraphics.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXGraphics.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXInput.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\DXInput.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\FontE.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\LineE.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\MatrixE.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\PixelFormat.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\TStage.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Impl\DXLib\VertexUP.h"
+					>
+				</File>
+				<Filter
+					Name="SurTex"
+					>
+					<File
+						RelativePath=".\Impl\DXLib\ImageE.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SpriteE.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SurTex\STDef.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SurTex\STLock.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SurTex\Surface.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SurTex\SurTex.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Impl\DXLib\SurTex\Texture.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="core"
