--- a/trunk/core/OUE/CMakeLists.txt
+++ b/trunk/core/OUE/CMakeLists.txt
@@ -20,4 +20,4 @@ SET_TARGET_PROPERTIES(${OUE_LIB} PROPERTIES
 	)
 
 
-TARGET_LINK_LIBRARIES(${OUE_LIB} ${LUA_LIB}  msvcrt-ruby190)
+TARGET_LINK_LIBRARIES(${OUE_LIB} ${LUA_LIB}  ${RUBTLIB})
