--- a/core/OUE/OUE.vcproj
+++ b/core/OUE/OUE.vcproj
@@ -230,6 +230,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\rblib\single_byte.c"
+				>
+			</File>
+			<File
 				RelativePath=".\Sprite.cpp"
 				>
 			</File>
