SWIG去掉了Ownership转移，减少了复杂性。脚本作为附加特性，基本上可以用来制作原型和简单小游戏，但无法应对过于复杂的大游戏。 为更新函数加入参数dt，可支持按时间更新。 对Handle的bug修正和完善。是否加入进来仍在考虑之中。

--- a/core/OUE/OUE.vcproj
+++ b/core/OUE/OUE.vcproj
@@ -140,6 +140,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="msvcr80-ruby191.lib"
 				OutputFile="$(OutDir)\$(ProjectName).so"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\lib\;$(DXSDK_DIR)Lib\x86"
